DH_P2.53/styles/styles.css
/* ... */
    #game-logs-modal .game-logs-table-body::-webkit-scrollbar-thumb:hover {
      background-color: rgba(255,255,255,0.12);
    }
    #game-logs-modal .game-logs-table-body::-webkit-scrollbar-track {
      background: transparent;
    }
    #game-logs-modal .game-logs-table-body::-webkit-scrollbar-corner {
      background: transparent;
    }
    #modal-body th,
    #modal-body td {
      padding: 0.2rem 0.25rem;
      text-align: center;
      /* border-bottom is removed from here to be more specific */
    }
    #game-logs-modal thead th.gamelog-header-passing,
    #game-logs-modal tfoot th.gamelog-header-passing {
      color: #FFB2D8;
    }
    #game-logs-modal thead th.gamelog-header-rushing,
    #game-logs-modal tfoot th.gamelog-header-rushing {
      color: #75e0b7;
    }
    #game-logs-modal thead th.gamelog-header-receiving,
    #game-logs-modal tfoot th.gamelog-header-receiving {
      color: #63b0de;
    }
    #game-logs-modal thead th.gamelog-header-all,
    #game-logs-modal tfoot th.gamelog-header-all {
      color: #b7adfe;
    }
    #modal-body thead th {
      border-bottom: 1px solid var(--color-panel-border);
    }
    #modal-body th {
      font-weight: 600;
      font-size: 0.6rem;
      color: #bbc0e8;
      white-space:nowrap;
    }
    #modal-body tfoot tr {
      border-top: 1px solid rgb(128 138 189 / 18%);
      white-space:nowrap;
      font-size: 0.7rem;
    }
    #modal-body tfoot th {
        color: var(--color-accent-primary);
        white-space:nowrap;
        padding: 0.25rem 0rem 0.35rem 0.02rem;
    }
    #game-logs-modal .game-logs-table-footer tfoot tr:first-child th {
        padding-top: 0.35rem;
        padding-bottom: 0.35rem;
    }
    #modal-body .no-logs {
        text-align: center;
        padding: 2rem;
        font-style: italic;
        min-height: 300px;
        display: flex;
        align-items: center;
        justify-content: center;
    }
    #modal-header {
      text-align: center;
    }
    #modal-player-name {
      text-align: center;
      margin-bottom: 0.12rem;
    }
    #modal-player-vitals {
      display: flex;
      justify-content: center;
    }
    .player-vitals {
      display: flex;
      align-items: flex-end;
      justify-content: center;
      gap: 1.9rem;
      white-space: nowrap;
       }
    .player-vitals__item {
      display: flex;
      flex-direction: column;
      align-items: center;
      gap: 0.1rem;
    }
    .player-vitals__label {
      font-size: 0.45rem;
      letter-spacing: 0.07em;
      color: var(--color-text-tertiary);
      text-transform: uppercase;
      line-height: 1;
    }
    .player-vitals__value {
      font-size: 0.75rem;
      font-weight: 400;
      color: #BDC1D8df;
      line-height: 1;
    }
    .player-vitals--modal {
      margin: 0.2rem 0 0.58rem;
    border: 1px solid #ffffff10;
    padding: 4px 7px;
    border-radius: 8px;
    }
    .player-vitals--modal {
    position: relative;
    background: rgba(0, 0, 0, 0.02);
    backdrop-filter: blur(1px) saturate(180%);
    border: 1px solid rgba(250, 250, 250, 0.1);
    box-shadow: 0 8px 32px rgba(31, 38, 105, 0.1), inset 0 6px 20px rgba(255, 255, 255, 0.013);
    }
    .player-vitals--modal::after {
        content: '';
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;
        height: 100%;
        background: rgba(255, 255, 255, 0.01);
        border-radius: 8px;
        backdrop-filter: blur(1px);
        box-shadow: inset 10px 12px 0px -8px rgba(255, 255, 255, .03),
        inset 0px 8px 0px -6px rgba(255, 255, 255, .031);
        opacity: 0.4;
        z-index: -1;
        filter: blur(1px) drop-shadow(10px 4px 6px black) brightness(100%);
        pointer-events: none;
    }
    .player-vitals--compare {
      margin: 0.15rem auto 0.25rem;
      border-radius: 8px;
      border: 1px solid #fff2;
      padding: 4px 4px;
      width: 100%;
      display: flex;
      justify-content: center;
      flex-wrap: nowrap;
      column-gap: 0.5rem;
      row-gap: 0.25rem;
      white-space: nowrap;
      margin-bottom:2px;
    }
    .player-vitals--compare {
    position: relative;
    background: rgba(0, 0, 0, 0.02);
    backdrop-filter: blur(1px) saturate(180%);
    border: 1px solid rgba(250, 250, 250, 0.1);
    box-shadow: 0 8px 32px rgba(31, 38, 105, 0.1), inset 0 6px 20px rgba(255, 255, 255, 0.013);
    }
    .player-vitals--compare::after {
        content: '';
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;
        height: 100%;
        background: rgba(255, 255, 255, 0.01);
        border-radius: 8px;
        backdrop-filter: blur(1px);
        box-shadow: inset 10px 12px 0px -8px rgba(255, 255, 255, .07),
        inset 0px 8px 0px -6px rgba(255, 255, 255, .031);
        opacity: 0.4;
        z-index: -1;
        filter: blur(1px) drop-shadow(10px 4px 6px black) brightness(100%);
        pointer-events: none;
    }
    .player-vitals--compare .player-vitals__label {
      font-size: 0.35rem;
      letter-spacing: 0.16em;
    }
    .player-vitals--compare .player-vitals__item {
      flex: 0 1 auto;
    }
    .player-vitals--compare .player-vitals__value {
      font-size: 0.63rem;
    }
    #modal-summary-row {
      display: flex;
      justify-content: center;
      align-items: center;
      gap: 0.5rem;
      margin-bottom: 0.6rem;
    }
    #modal-summary-chips {
      display: flex;
      justify-content: center;
      gap: 1rem;
      flex-wrap: nowrap;
    }
    /* · · Summary Chips · · */
    .summary-chip {
        position: relative;
        background: rgba(0, 0, 0, 0.02);
        backdrop-filter: blur(1px) saturate(180%);
        border: 1px solid rgba(250, 250, 250, 0.1);
        border-radius: 13px;
        padding: 1.25rem;
        box-shadow: 0 8px 32px rgba(31, 38, 105, 0.1), inset 0 6px 20px rgba(255, 255, 255, 0.013);
    }
/* ... */

